# ai-powered-video-analyzer

./: .gitignore  README.md  analyze.py  install.sh  pyproject.toml  requirements.txt  video_processing_gui.py
analyze/: __init__.py  audio_event_detection.py  audio_transcript.py  box_detection.py  object_detection.py  scene_description.py  video_cleanup.py  video_cut_detection.py
